--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,7 +60,7 @@ deploy:
     # and nightly channels. This condition makes sure there is only one release
     # for such targets and that's generated using the stable channel
     RUST_VERSION: stable
-    appveyor_repo_tag: false
+    appveyor_repo_tag: true
   provider: GitHub
   force_update: true
 
